Metaprogramming/Antrl/Capl/capl-g4/grammar/.antlr/CaplParser.java
// Generated from d:\Projects\dotNET\appDev-NET\Metaprogramming\Antrl\Capl_grammar\capl-g4\grammar\Capl.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CaplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Export=1, Testcase=2, Testfunction=3, Includes=4, Const=5, StopMeasurement=6, 
		Start=7, ErrorFrame=8, On=9, Variables=10, Break=11, Case=12, Char=13, 
		Byte=14, Continue=15, Default=16, Do=17, Double=18, Else=19, Float=20, 
		For=21, If=22, Int=23, Word=24, Dword=25, Qword=26, EnvVar=27, MsTimer=28, 
		Long=29, Int64=30, Return=31, Switch=32, Void=33, While=34, Struct=35, 
		LeftParen=36, RightParen=37, LeftBracket=38, RightBracket=39, LeftBrace=40, 
		RightBrace=41, Less=42, LessEqual=43, Greater=44, GreaterEqual=45, LeftShift=46, 
		RightShift=47, Plus=48, PlusPlus=49, Minus=50, MinusMinus=51, Div=52, 
		Mod=53, And=54, Or=55, AndAnd=56, OrOr=57, Caret=58, Not=59, Tilde=60, 
		Question=61, Colon=62, Semi=63, Comma=64, Assign=65, StarAssign=66, DivAssign=67, 
		ModAssign=68, PlusAssign=69, MinusAssign=70, LeftShiftAssign=71, RightShiftAssign=72, 
		AndAssign=73, XorAssign=74, OrAssign=75, Star=76, Equal=77, NotEqual=78, 
		Ellipsis=79, Enum=80, Timer=81, Message=82, MultiplexedMessage=83, DiagRequest=84, 
		DiagResponse=85, Signal=86, Key=87, F1=88, F2=89, F3=90, F4=91, F5=92, 
		F6=93, F7=94, F8=95, F9=96, F10=97, F11=98, F12=99, CtrlF1=100, CtrlF2=101, 
		CtrlF3=102, CtrlF4=103, CtrlF5=104, CtrlF6=105, CtrlF7=106, CtrlF8=107, 
		CtrlF9=108, CtrlF10=109, CtrlF11=110, CtrlF12=111, PageUp=112, PageDown=113, 
		Home=114, Identifier=115, This=116, Dot=117, AccessToSignalIdentifier=118, 
		Dollar=119, Phys=120, Raw=121, Raw64=122, Rx=123, RxRequest=124, SysvarIdentifier=125, 
		Sysvar=126, DoubleColon=127, AtSign=128, DoubleSysvar=129, Constant=130, 
		DigitSequence=131, StringLiteral=132, IncludeDirective=133, Whitespace=134, 
		Newline=135, BlockComment=136, LineComment=137;
	public static final int
		RULE_primaryExpression = 0, RULE_includeBlock = 1, RULE_startBlock = 2, 
		RULE_variableBlock = 3, RULE_eventBlock = 4, RULE_timerBlock = 5, RULE_errorFrame = 6, 
		RULE_messageBlock = 7, RULE_multiplexedMessageBlock = 8, RULE_diagRequestBlock = 9, 
		RULE_diagResponseBlock = 10, RULE_signalBlock = 11, RULE_sysvarBlock = 12, 
		RULE_stopMeasurement = 13, RULE_envBlock = 14, RULE_postfixExpression = 15, 
		RULE_argumentExpressionList = 16, RULE_unaryExpression = 17, RULE_unaryOperator = 18, 
		RULE_castExpression = 19, RULE_multiplicativeExpression = 20, RULE_additiveExpression = 21, 
		RULE_shiftExpression = 22, RULE_relationalExpression = 23, RULE_equalityExpression = 24, 
		RULE_andExpression = 25, RULE_exclusiveOrExpression = 26, RULE_inclusiveOrExpression = 27, 
		RULE_logicalAndExpression = 28, RULE_logicalOrExpression = 29, RULE_conditionalExpression = 30, 
		RULE_assignmentExpression = 31, RULE_assignmentOperator = 32, RULE_expression = 33, 
		RULE_constantExpression = 34, RULE_declaration = 35, RULE_declarationSpecifiers = 36, 
		RULE_declarationSpecifiers2 = 37, RULE_typeQualifier = 38, RULE_functionSpecifier = 39, 
		RULE_declarationSpecifier = 40, RULE_initDeclaratorList = 41, RULE_initDeclarator = 42, 
		RULE_typeSpecifier = 43, RULE_structSpecifier = 44, RULE_structure = 45, 
		RULE_structDeclarationList = 46, RULE_structDeclaration = 47, RULE_specifierQualifierList = 48, 
		RULE_structDeclaratorList = 49, RULE_structDeclarator = 50, RULE_declarator = 51, 
		RULE_directDeclarator = 52, RULE_nestedParenthesesBlock = 53, RULE_parameterTypeList = 54, 
		RULE_parameterList = 55, RULE_parameterDeclaration = 56, RULE_identifierList = 57, 
		RULE_typeName = 58, RULE_abstractDeclarator = 59, RULE_directAbstractDeclarator = 60, 
		RULE_initializer = 61, RULE_initializerList = 62, RULE_designation = 63, 
		RULE_designatorList = 64, RULE_designator = 65, RULE_statement = 66, RULE_labeledStatement = 67, 
		RULE_compoundStatement = 68, RULE_blockItemList = 69, RULE_blockItem = 70, 
		RULE_expressionStatement = 71, RULE_selectionStatement = 72, RULE_iterationStatement = 73, 
		RULE_forCondition = 74, RULE_forDeclaration = 75, RULE_forExpression = 76, 
		RULE_jumpStatement = 77, RULE_compilationUnit = 78, RULE_translationUnit = 79, 
		RULE_externalDeclaration = 80, RULE_functionDefinition = 81, RULE_declarationList = 82, 
		RULE_enumSpecifier = 83, RULE_enumeratorList = 84, RULE_enumerator = 85, 
		RULE_enumerationConstant = 86, RULE_timerType = 87, RULE_messageType = 88, 
		RULE_multiplexedMessageType = 89, RULE_diagRequestType = 90, RULE_diagResponseType = 91, 
		RULE_signalType = 92, RULE_sysvarType = 93, RULE_keyEventType = 94;
	private static String[] makeRuleNames() {
		return new String[] {
			"primaryExpression", "includeBlock", "startBlock", "variableBlock", "eventBlock", 
			"timerBlock", "errorFrame", "messageBlock", "multiplexedMessageBlock", 
			"diagRequestBlock", "diagResponseBlock", "signalBlock", "sysvarBlock", 
			"stopMeasurement", "envBlock", "postfixExpression", "argumentExpressionList", 
			"unaryExpression", "unaryOperator", "castExpression", "multiplicativeExpression", 
			"additiveExpression", "shiftExpression", "relationalExpression", "equalityExpression", 
			"andExpression", "exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
			"logicalOrExpression", "conditionalExpression", "assignmentExpression", 
			"assignmentOperator", "expression", "constantExpression", "declaration", 
			"declarationSpecifiers", "declarationSpecifiers2", "typeQualifier", "functionSpecifier", 
			"declarationSpecifier", "initDeclaratorList", "initDeclarator", "typeSpecifier", 
			"structSpecifier", "structure", "structDeclarationList", "structDeclaration", 
			"specifierQualifierList", "structDeclaratorList", "structDeclarator", 
			"declarator", "directDeclarator", "nestedParenthesesBlock", "parameterTypeList", 
			"parameterList", "parameterDeclaration", "identifierList", "typeName", 
			"abstractDeclarator", "directAbstractDeclarator", "initializer", "initializerList", 
			"designation", "designatorList", "designator", "statement", "labeledStatement", 
			"compoundStatement", "blockItemList", "blockItem", "expressionStatement", 
			"selectionStatement", "iterationStatement", "forCondition", "forDeclaration", 
			"forExpression", "jumpStatement", "compilationUnit", "translationUnit", 
			"externalDeclaration", "functionDefinition", "declarationList", "enumSpecifier", 
			"enumeratorList", "enumerator", "enumerationConstant", "timerType", "messageType", 
			"multiplexedMessageType", "diagRequestType", "diagResponseType", "signalType", 
			"sysvarType", "keyEventType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'export'", "'testcase'", "'testfunction'", "'includes'", "'const'", 
			"'stopMeasurement'", "'start'", "'errorFrame'", "'on'", "'variables'", 
			"'break'", "'case'", "'char'", "'byte'", "'continue'", "'default'", "'do'", 
			"'double'", "'else'", "'float'", "'for'", "'if'", "'int'", "'word'", 
			"'dword'", "'qword'", "'envVar'", "'msTimer'", "'long'", "'int64'", "'return'", 
			"'switch'", "'void'", "'while'", "'struct'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", 
			"'-'", "'--'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", 
			"'~'", "'?'", "':'", "';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", 
			"'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'*'", "'=='", "'!='", 
			"'...'", "'enum'", "'timer'", "'message'", "'multiplexed_message'", "'diagRequest'", 
			"'diagResponse'", "'signal'", "'key'", "'F1'", "'F2'", "'F3'", "'F4'", 
			"'F5'", "'F6'", "'F7'", "'F8'", "'F9'", "'F10'", "'F11'", "'F12'", "'ctrlF1'", 
			"'ctrlF2'", "'ctrlF3'", "'ctrlF4'", "'ctrlF5'", "'ctrlF6'", "'ctrlF7'", 
			"'ctrlF8'", "'ctrlF9'", "'ctrlF10'", "'ctrlF11'", "'ctrlF12'", "'PageUp'", 
			"'PageDown'", "'Home'", null, "'this'", "'.'", null, "'$'", "'phys'", 
			"'raw'", "'raw64'", "'rx'", "'txrq'", null, "'sysvar'", "'::'", "'@'", 
			"'sysvar sysvar'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Export", "Testcase", "Testfunction", "Includes", "Const", "StopMeasurement", 
			"Start", "ErrorFrame", "On", "Variables", "Break", "Case", "Char", "Byte", 
			"Continue", "Default", "Do", "Double", "Else", "Float", "For", "If", 
			"Int", "Word", "Dword", "Qword", "EnvVar", "MsTimer", "Long", "Int64", 
			"Return", "Switch", "Void", "While", "Struct", "LeftParen", "RightParen", 
			"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", 
			"Greater", "GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", 
			"Minus", "MinusMinus", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
			"Not", "Tilde", "Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", 
			"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
			"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Star", "Equal", 
			"NotEqual", "Ellipsis", "Enum", "Timer", "Message", "MultiplexedMessage", 
			"DiagRequest", "DiagResponse", "Signal", "Key", "F1", "F2", "F3", "F4", 
			"F5", "F6", "F7", "F8", "F9", "F10", "F11", "F12", "CtrlF1", "CtrlF2", 
			"CtrlF3", "CtrlF4", "CtrlF5", "CtrlF6", "CtrlF7", "CtrlF8", "CtrlF9", 
			"CtrlF10", "CtrlF11", "CtrlF12", "PageUp", "PageDown", "Home", "Identifier", 
			"This", "Dot", "AccessToSignalIdentifier", "Dollar", "Phys", "Raw", "Raw64", 
			"Rx", "RxRequest", "SysvarIdentifier", "Sysvar", "DoubleColon", "AtSign", 
			"DoubleSysvar", "Constant", "DigitSequence", "StringLiteral", "IncludeDirective", 
			"Whitespace", "Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Capl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CaplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CaplParser.Identifier, 0); }
		public TerminalNode AccessToSignalIdentifier() { return getToken(CaplParser.AccessToSignalIdentifier, 0); }
		public TerminalNode SysvarIdentifier() { return getToken(CaplParser.SysvarIdentifier, 0); }
		public TerminalNode Constant() { return getToken(CaplParser.Constant, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(CaplParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(CaplParser.StringLiteral, i);
		}
		public TerminalNode LeftParen() { return getToken(CaplParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(CaplParser.RightParen, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<IncludeBlockContext> includeBlock() {
			return getRuleContexts(IncludeBlockContext.class);
		}
		public IncludeBlockContext includeBlock(int i) {
			return getRuleContext(IncludeBlockContext.class,i);
		}
		public List<VariableBlockContext> variableBlock() {
			return getRuleContexts(VariableBlockContext.class);
		}
		public VariableBlockContext variableBlock(int i) {
			return getRuleContext(VariableBlockContext.class,i);
		}
		public List<EventBlockContext> eventBlock() {
			return getRuleContexts(EventBlockContext.class);
		}
		public EventBlockContext eventBlock(int i) {
			return getRuleContext(EventBlockContext.class,i);
		}
		public List<TimerBlockContext> timerBlock() {
			return getRuleContexts(TimerBlockContext.class);
		}
		public TimerBlockContext timerBlock(int i) {
			return getRuleContext(TimerBlockContext.class,i);
		}
		public List<ErrorFrameContext> errorFrame() {
			return getRuleContexts(ErrorFrameContext.class);
		}
		public ErrorFrameContext errorFrame(int i) {
			return getRuleContext(ErrorFrameContext.class,i);
		}
		public List<EnvBlockContext> envBlock() {
			return getRuleContexts(EnvBlockContext.class);
		}
		public EnvBlockContext envBlock(int i) {
			return getRuleContext(EnvBlockContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<EnumSpecifierContext> enumSpecifier() {
			return getRuleContexts(EnumSpecifierContext.class);
		}
		public EnumSpecifierContext enumSpecifier(int i) {
			return getRuleContext(EnumSpecifierContext.class,i);
		}
		public List<StructSpecifierContext> structSpecifier() {
			return getRuleContexts(StructSpecifierContext.class);
		}
		public StructSpecifierContext structSpecifier(int i) {
			return getRuleContext(StructSpecifierContext.class,i);
		}
		public List<StartBlockContext> startBlock() {
			return getRuleContexts(StartBlockContext.class);
		}
		public StartBlockContext startBlock(int i) {
			return getRuleContext(StartBlockContext.class,i);
		}
		public List<MessageBlockContext> messageBlock() {
			return getRuleContexts(MessageBlockContext.class);
		}
		public MessageBlockContext messageBlock(int i) {
			return getRuleContext(MessageBlockContext.class,i);
		}
		public List<MultiplexedMessageBlockContext> multiplexedMessageBlock() {
			return getRuleContexts(MultiplexedMessageBlockContext.class);
		}
		public MultiplexedMessageBlockContext multiplexedMessageBlock(int i) {
			return getRuleContext(MultiplexedMessageBlockContext.class,i);
		}
		public List<StopMeasurementContext> stopMeasurement() {
			return getRuleContexts(StopMeasurementContext.class);
		}
		public StopMeasurementContext stopMeasurement(int i) {
			return getRuleContext(StopMeasurementContext.class,i);
		}
		public List<DiagRequestBlockContext> diagRequestBlock() {
			return getRuleContexts(DiagRequestBlockContext.class);
		}
		public DiagRequestBlockContext diagRequestBlock(int i) {
			return getRuleContext(DiagRequestBlockContext.class,i);
		}
		public List<DiagResponseBlockContext> diagResponseBlock() {
			return getRuleContexts(DiagResponseBlockContext.class);
		}
		public DiagResponseBlockContext diagResponseBlock(int i) {
			return getRuleContext(DiagResponseBlockContext.class,i);
		}
		public List<SignalBlockContext> signalBlock() {
			return getRuleContexts(SignalBlockContext.class);
		}
		public SignalBlockContext signalBlock(int i) {
			return getRuleContext(SignalBlockContext.class,i);
		}
		public List<SysvarBlockContext> sysvarBlock() {
			return getRuleContexts(SysvarBlockContext.class);
		}
		public SysvarBlockContext sysvarBlock(int i) {
			return getRuleContext(SysvarBlockContext.class,i);
		}
		public List<ExternalDeclarationContext> externalDeclaration() {
			return getRuleContexts(ExternalDeclarationContext.class);
		}
		public ExternalDeclarationContext externalDeclaration(int i) {
			return getRuleContext(ExternalDeclarationContext.class,i);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
			int _alt;
			setState(229);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				match(AccessToSignalIdentifier);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				match(SysvarIdentifier);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(193);
				match(Constant);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(195); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(194);
					match(StringLiteral);
					}
					}
					setState(197); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(199);
				match(LeftParen);
				setState(200);
				expression();
				setState(201);
				match(RightParen);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(203);
				match(LeftParen);
				setState(204);
				compoundStatement();
				setState(205);
				match(RightParen);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(225); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						setState(225);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
						case 1:
							{
							setState(207);
							includeBlock();
							}
							break;
						case 2:
							{
							setState(208);
							variableBlock();
							}
							break;
						case 3:
							{
							setState(209);
							eventBlock();
							}
							break;
						case 4:
							{
							setState(210);
							timerBlock();
							}
							break;
						case 5:
							{
							setState(211);
							errorFrame();
							}
							break;
						case 6:
							{
							setState(212);
							envBlock();
							}
							break;
						case 7:
							{
							setState(213);
							functionDefinition();
							}
							break;
						case 8:
							{
							setState(214);
							enumSpecifier();
							}
							break;
						case 9:
							{
							setState(215);
							structSpecifier();
							}
							break;
						case 10:
							{
							setState(216);
							startBlock();
							}
							break;
						case 11:
							{
							setState(217);
							messageBlock();
							}
							break;
						case 12:
							{
							setState(218);
							multiplexedMessageBlock();
							}
							break;
						case 13:
							{
							setState(219);
							stopMeasurement();
							}
							break;
						case 14:
							{
							setState(220);
							diagRequestBlock();
							}
							break;
						case 15:
							{
							setState(221);
							diagResponseBlock();
							}
							break;
						case 16:
							{
							setState(222);
							signalBlock();
							}
							break;
						case 17:
							{
							setState(223);
							sysvarBlock();
							}
							break;
						case 18:
							{
							setState(224);
							externalDeclaration();
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(227); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
